servarr/deploy-kavita.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kavita
  namespace: servarr
spec:
  replicas: 0
  selector:
    matchLabels:
      app: kavita
  template:
    metadata:
      labels:
        app: kavita
    spec:
      containers:
      - name: kavita
        image: lscr.io/linuxserver/kavita:latest
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: config-storage
          mountPath: /config
        - name: servarr-storage
          mountPath: /data
      volumes:
      - name: config-storage
        persistentVolumeClaim:
          claimName: kavita-config-pvc
      - name: servarr-storage
        persistentVolumeClaim:
          claimName: servarr-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: kavita
  namespace: servarr
spec:
  selector:
    app: kavita
  ports:
    - name: http
      port: 5000
      targetPort: 5000
