servarr/service-ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: readarr-ingressroute
  namespace: servarr
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`readarr.192.168.3.125.nip.io`)
      kind: Rule
      services:
        - name: readarr
          port: 8787
      middlewares:
        - name: cors
          namespace: authentik-ha
        - name: authentik
          namespace: authentik-ha
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-ingressroute
  namespace: servarr
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`radarr.192.168.3.125.nip.io`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
      middlewares:
        - name: cors
          namespace: authentik-ha
        - name: authentik
          namespace: authentik-ha
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-ingressroute
  namespace: servarr
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`sonarr.192.168.3.125.nip.io`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
      middlewares:
        - name: cors
          namespace: authentik-ha
        - name: authentik
          namespace: authentik-ha
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr-ingressroute
  namespace: servarr
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prowlarr.192.168.3.125.nip.io`)
      kind: Rule
      services:
        - name: prowlarr
          port: 9696
      middlewares:
        - name: cors
          namespace: authentik-ha
        - name: authentik
          namespace: authentik-ha
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent-ingressroute
  namespace: servarr
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`qbittorrent.192.168.3.125.nip.io`)
      kind: Rule
      services:
        - name: qbittorrent
          port: 8080
      middlewares:
        - name: cors
          namespace: authentik-ha
        - name: authentik
          namespace: authentik-ha
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-ingressroute
  namespace: servarr
spec:
  entryPoints:
    - web #websecure
  routes:
    - match: Host(`jellyfin.192.168.3.125.nip.io`)
      kind: Rule
      services:
        - name: jellyfin
          port: 80
      middlewares:
        - name: cors
          namespace: authentik-ha
        #- name: authentik
        #  namespace: authentik
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kavita-ingressroute
  namespace: servarr
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`kavita.192.168.3.125.nip.io`)
      kind: Rule
      services:
        - name: kavita
          port: 5000
      middlewares:
        - name: cors
          namespace: authentik-ha
            #- name: authentik #It don't support authentik integration
            #namespace: authentik-ha
